# profile.wearable.apps.native.apptray-widget

./: CMakeLists.txt
apptray-widget/: .cproject  .project  .rds_delta  .sdk_delta.info  CMakeLists.txt  tizen-manifest.xml
apptray-widget-app/: .cproject  .project  .rds_delta  .sdk_delta.info  .tproject  CMakeLists.txt  org.tizen.apptray-widget.manifest~  org.tizen.apptray-widget.xml  project_def.prop  tizen-manifest.xml
apptray-widget-app/.sign/: .manifest.tmp  author-signature.xml  signature1.xml
apptray-widget-app/inc/: app-widget-app.h  app-widget-app_log.h  item_info.h  key.h  util.h
apptray-widget-app/inc/common/: home_custom_index.h  home_custom_index_info.h  home_custom_scroller.h  home_custom_scroller_info.h
apptray-widget-app/res/edje/: CMakeLists.txt  add_to_shortcut.edc  app-widget-colorclass.in  home_custom_layout.edc
apptray-widget-app/res/image/: CMakeLists.txt
apptray-widget-app/src/: app-widget-app.c  key.c  util.c
apptray-widget-app/src/common/: home_custom_index.c  home_custom_scroller.c
apptray-widget/.sign/: .manifest.tmp  author-signature.xml  signature1.xml
apptray-widget/inc/: app-widget.h  app-widget_log.h
apptray-widget/res/edje/: app_shortcut.edc
apptray-widget/src/: app-widget.c
packaging/: org.tizen.apptray-widget.spec
