INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/unknown.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/apps_widget_preview.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/apps_widget_preview.png DESTINATION ${SHARED_RES})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/apps_widget_preview.png DESTINATION /usr/share/icons)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/b_home_screen_widget_line.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/b_home_screen_recent_icon.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/b_home_screen_more_apps.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/indicator_horizontal_dot.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/home_indicator_horizontal_dot.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/home_indicator_clock_01.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/home_indicator_clock_02.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tw_ic_popup_btn_check.png DESTINATION ${IMAGEDIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tw_ic_popup_btn_delete.png DESTINATION ${IMAGEDIR})
